--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,14 @@ spring:
   application:
     name: product-service
 server:
-  port: 8089
+  port: 8086
 
-eureka:
+eureka:         
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    healthcheck:
+      enabled: true
+  instance:
+    preferIpAddress: false
